[gd_scene load_steps=3 format=3 uid="uid://mi3sd0d50tqd"]

[ext_resource type="Script" path="res://training.gd" id="1_1gk1p"]

[sub_resource type="CanvasTexture" id="CanvasTexture_b8uuy"]
specular_color = Color(0.711295, 0.65318, 0.509714, 1)

[node name="Training" type="Node2D"]
script = ExtResource("1_1gk1p")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextEdit" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 16.0
offset_right = 480.0
offset_bottom = 88.0
text = "D,DR,R,HP"

[node name="ButtonFrames" type="TextEdit" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 112.0
offset_top = 136.0
offset_right = 259.0
offset_bottom = 172.0
text = "60"

[node name="TextEdit4" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 368.0
offset_top = 136.0
offset_right = 515.0
offset_bottom = 172.0
text = "25"

[node name="TextEdit5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 592.0
offset_top = 40.0
offset_right = 739.0
offset_bottom = 76.0
text = "not set"

[node name="TextEdit3" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 200.0
offset_top = 216.0
offset_right = 304.0
offset_bottom = 252.0
text = "60"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 48.0
offset_top = 16.0
offset_right = 104.0
offset_bottom = 39.0
text = "Motion"

[node name="Label2" type="Label" parent="Control"]
layout_mode = 0
offset_left = -48.0
offset_top = 136.0
offset_right = 100.0
offset_bottom = 185.0
text = "Button
frames:"
horizontal_alignment = 2

[node name="Label19" type="Label" parent="Control"]
layout_mode = 0
offset_left = 208.0
offset_top = 136.0
offset_right = 356.0
offset_bottom = 185.0
text = "Rest period
frames"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="Control"]
layout_mode = 0
offset_left = 640.0
offset_top = 224.0
offset_right = 788.0
offset_bottom = 248.0
text = "Currrent frame:"
horizontal_alignment = 2

[node name="Info" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 608.0
offset_top = 200.0
offset_right = 848.0
offset_bottom = 224.0
text = "To start, press the first motion."
horizontal_alignment = 2

[node name="Label5" type="Label" parent="Control"]
layout_mode = 0
offset_left = 48.0
offset_top = 224.0
offset_right = 192.0
offset_bottom = 248.0
text = "every"
horizontal_alignment = 2

[node name="Label6" type="Label" parent="Control"]
layout_mode = 0
offset_left = 312.0
offset_top = 224.0
offset_right = 456.0
offset_bottom = 248.0
text = "frames"

[node name="Label7" type="Label" parent="Control"]
layout_mode = 0
offset_left = 552.0
offset_top = 16.0
offset_right = 696.0
offset_bottom = 40.0
text = "Keybinds"

[node name="Label8" type="Label" parent="Control"]
layout_mode = 0
offset_left = 552.0
offset_top = 48.0
offset_right = 696.0
offset_bottom = 72.0
text = "Up"

[node name="Label9" type="Label" parent="Control"]
layout_mode = 0
offset_left = 552.0
offset_top = 80.0
offset_right = 696.0
offset_bottom = 104.0
text = "Down"

[node name="Label10" type="Label" parent="Control"]
layout_mode = 0
offset_left = 552.0
offset_top = 112.0
offset_right = 696.0
offset_bottom = 136.0
text = "Left"

[node name="Label11" type="Label" parent="Control"]
layout_mode = 0
offset_left = 552.0
offset_top = 144.0
offset_right = 696.0
offset_bottom = 168.0
text = "Right"

[node name="Label12" type="Label" parent="Control"]
layout_mode = 0
offset_left = 736.0
offset_top = 48.0
offset_right = 880.0
offset_bottom = 72.0
text = "LP"

[node name="Label13" type="Label" parent="Control"]
layout_mode = 0
offset_left = 736.0
offset_top = 72.0
offset_right = 880.0
offset_bottom = 96.0
text = "MP"

[node name="Label14" type="Label" parent="Control"]
layout_mode = 0
offset_left = 736.0
offset_top = 104.0
offset_right = 880.0
offset_bottom = 128.0
text = "HP"

[node name="Label15" type="Label" parent="Control"]
layout_mode = 0
offset_left = 880.0
offset_top = 48.0
offset_right = 1024.0
offset_bottom = 72.0
text = "LK"

[node name="Label16" type="Label" parent="Control"]
layout_mode = 0
offset_left = 880.0
offset_top = 72.0
offset_right = 1024.0
offset_bottom = 96.0
text = "MK
"

[node name="Label17" type="Label" parent="Control"]
layout_mode = 0
offset_left = 880.0
offset_top = 104.0
offset_right = 1024.0
offset_bottom = 128.0
text = "HK"

[node name="ExpectedButton" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 16.0
offset_top = 272.0
offset_right = 624.0
offset_bottom = 296.0
text = "Up"
horizontal_alignment = 1

[node name="CurrentFrameNum" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 800.0
offset_top = 224.0
offset_right = 948.0
offset_bottom = 248.0
text = "0"

[node name="Button2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 176.0
offset_right = 158.0
offset_bottom = 207.0
text = "25"

[node name="Button3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 176.0
offset_right = 206.0
offset_bottom = 207.0
text = "60"

[node name="Button5" type="Button" parent="Control"]
layout_mode = 0
offset_left = 400.0
offset_top = 192.0
offset_right = 488.0
offset_bottom = 223.0
text = "Start"

[node name="Button4" type="Button" parent="Control"]
layout_mode = 0
offset_left = 208.0
offset_top = 176.0
offset_right = 254.0
offset_bottom = 207.0
text = "120"

[node name="OptionButton" type="OptionButton" parent="Control"]
layout_mode = 0
offset_left = 112.0
offset_top = 96.0
offset_right = 344.0
offset_bottom = 128.0
selected = 0
item_count = 3
popup/item_0/text = "Custom"
popup/item_1/text = "Fireball"
popup/item_1/id = 1
popup/item_2/text = "Dragon punch"
popup/item_2/id = 2

[node name="CheckButton" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 216.0
offset_right = 148.0
offset_bottom = 247.0
text = "Metronome"

[node name="CheckButton2" type="CheckButton" parent="Control"]
layout_mode = 0
offset_left = 384.0
offset_top = 96.0
offset_right = 482.0
offset_bottom = 127.0
text = "Mirror"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(208, 296)
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_b8uuy")
